<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="parse_app_id">I8eqiaQUhqKBP2hy0yUGjFEusxc7uUlfyd2GY1g8</string>
    <string name="parse_client_key">xN6q4rk84CN7WonIx6dqfMpo0hr1J7hMPchqFpke</string>

    <string name="app_name">Un Auto</string>

    <string name="hello_world">Hello World!</string>
    <string name="title_activity_sign_up_or_login">Sign in</string>

    <!-- Strings related to login or login up -->
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="action_sign_up">Sign up</string>
    <string name="prompt_phone_number">Phone Number</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_create_account">Create account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_phone">This phone is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="did_you_forget_your_password">Did you forget your password?</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navigation_drawer_my_sites">My Sites</string>
    <string name="navigation_drawer_my_routes">My Routes</string>
    <string name="navigation_drawer_share">Share</string>
    <string name="navigation_drawer_notification">Notifications</string>

    <string name="navigation_drawer_communicate">Communicate</string>
    <string name="navigation_drawer_send">Send feedback</string>

    <string name="navigation_drawer_support_and_configuration">Support and Configuration</string>
    <string name="navigation_drawer_help">Help</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_sign_off">Sign off</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
